[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["ThomasThelen <tommythelen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.13.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
